// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`atoms/Meter Default play-test 1`] = `
<style>
  :root{
      --animation-rhythm: 1s;
      box-sizing: border-box;
      interpolate-size: allow-keywords;
  }

  @media (prefers-reduced-motion: reduce) {
    :root {
        --animation-rhythm: 0s;
    }
  }
  
  * {
    box-sizing: border-box;
  }
</style>
<div style="font-family: &quot;Inter Variable&quot;, Inter, system-ui, sans-serif;">
  <meter class="Meter_root__S_tTz undefined"
         data-testid="Meter"
  >
  </meter>
</div>
`;

exports[`atoms/Meter High play-test 1`] = `
<style>
  :root{
      --animation-rhythm: 1s;
      box-sizing: border-box;
      interpolate-size: allow-keywords;
  }

  @media (prefers-reduced-motion: reduce) {
    :root {
        --animation-rhythm: 0s;
    }
  }
  
  * {
    box-sizing: border-box;
  }
</style>
<div style="font-family: &quot;Inter Variable&quot;, Inter, system-ui, sans-serif;">
  <meter class="Meter_root__S_tTz undefined"
         data-testid="Meter"
         high="0.8"
         value="0.9"
  >
  </meter>
</div>
`;

exports[`atoms/Meter HighOptimum play-test 1`] = `
<style>
  :root{
      --animation-rhythm: 1s;
      box-sizing: border-box;
      interpolate-size: allow-keywords;
  }

  @media (prefers-reduced-motion: reduce) {
    :root {
        --animation-rhythm: 0s;
    }
  }
  
  * {
    box-sizing: border-box;
  }
</style>
<div style="font-family: &quot;Inter Variable&quot;, Inter, system-ui, sans-serif;">
  <meter class="Meter_root__S_tTz undefined"
         data-testid="Meter"
         low="0.3"
         high="0.7"
         value="0.2"
         optimum="0.8"
  >
  </meter>
</div>
`;

exports[`atoms/Meter Low play-test 1`] = `
<style>
  :root{
      --animation-rhythm: 1s;
      box-sizing: border-box;
      interpolate-size: allow-keywords;
  }

  @media (prefers-reduced-motion: reduce) {
    :root {
        --animation-rhythm: 0s;
    }
  }
  
  * {
    box-sizing: border-box;
  }
</style>
<div style="font-family: &quot;Inter Variable&quot;, Inter, system-ui, sans-serif;">
  <meter class="Meter_root__S_tTz undefined"
         data-testid="Meter"
         low="0.2"
         value="0.1"
  >
  </meter>
</div>
`;

exports[`atoms/Meter LowOptimum play-test 1`] = `
<style>
  :root{
      --animation-rhythm: 1s;
      box-sizing: border-box;
      interpolate-size: allow-keywords;
  }

  @media (prefers-reduced-motion: reduce) {
    :root {
        --animation-rhythm: 0s;
    }
  }
  
  * {
    box-sizing: border-box;
  }
</style>
<div style="font-family: &quot;Inter Variable&quot;, Inter, system-ui, sans-serif;">
  <meter class="Meter_root__S_tTz undefined"
         data-testid="Meter"
         low="0.3"
         high="0.7"
         value="0.8"
         optimum="0.2"
  >
  </meter>
</div>
`;

exports[`atoms/Meter Max play-test 1`] = `
<style>
  :root{
      --animation-rhythm: 1s;
      box-sizing: border-box;
      interpolate-size: allow-keywords;
  }

  @media (prefers-reduced-motion: reduce) {
    :root {
        --animation-rhythm: 0s;
    }
  }
  
  * {
    box-sizing: border-box;
  }
</style>
<div style="font-family: &quot;Inter Variable&quot;, Inter, system-ui, sans-serif;">
  <meter class="Meter_root__S_tTz undefined"
         data-testid="Meter"
         value="1"
  >
  </meter>
</div>
`;

exports[`atoms/Meter Middle play-test 1`] = `
<style>
  :root{
      --animation-rhythm: 1s;
      box-sizing: border-box;
      interpolate-size: allow-keywords;
  }

  @media (prefers-reduced-motion: reduce) {
    :root {
        --animation-rhythm: 0s;
    }
  }
  
  * {
    box-sizing: border-box;
  }
</style>
<div style="font-family: &quot;Inter Variable&quot;, Inter, system-ui, sans-serif;">
  <meter class="Meter_root__S_tTz undefined"
         data-testid="Meter"
         value="0.5"
  >
  </meter>
</div>
`;
